fix layout issues

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.6);
     transition: color 0.3s, 
     background-color 0.3s,
-    traansform 0.3s;
+    transform 0.3s;
     z-index: 5;
   }
 
